vercel configurations updated to integrate routes

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.js", "use": "@now/node-server"}]
+  "builds": [{ "src": "index.js", "use": "@now/node-server"}],
+  "routes": [
+    {
+      "src": "/markets/(?<id>[^/]*)",
+      "dest": "/index.js?id=$id",
+      "methods": ["GET"]
+    }
+  ]
 }
