--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
   "version": 2,
   "builds": [{ "src": "index.js", "use": "@now/node-server"}],
-  "routes": [
+  "headers": [
     {
-      "src": "/markets/(?<id>[^/]*)",
-      "dest": "/index.js?id=$id",
-      "methods": ["GET"]
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://cryptos-quote.vercel.app"},
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      ]
     }
-  ]
+  ],
+  "rewrites": [{ "source": "/markets/:id", "destination": "/index.js?id=$id" }]
 }
